--- a/experiments/seg_detector/synthtext_resnet18_deform_thre.yaml
+++ b/experiments/seg_detector/synthtext_resnet18_deform_thre.yaml
@@ -20,6 +20,7 @@ define:
         representer:
             class: SegDetectorRepresenter
             max_candidates: 1000
+            box_thresh: 0.5
         measurer:  
             class: QuadMeasurer
         visualizer:  
@@ -29,7 +30,7 @@ define:
         data_loader: 
             class: DataLoader
             dataset: ^train_data
-            batch_size: 16
+            batch_size: 24
             num_workers: 16
         checkpoint: 
             class: Checkpoint
@@ -64,7 +65,7 @@ define:
                 collect_fn:
                     class: ICDARCollectFN
         visualize: false
-        interval: 500
+        interval: 1000
         exempt: 1
 
     logger:
